--- a/themes/hugo-lithium/static/css/main.css
+++ b/themes/hugo-lithium/static/css/main.css
@@ -328,6 +328,9 @@ img {
   margin: 0 0 1rem;
   border-radius: 5px;
   max-width: 100%;
+  max-height: 500px; 
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .thumbnail {
@@ -358,6 +361,7 @@ img {
   width: 100%;
   padding-bottom: 56.25%; 
   height: 0;
+  max-width: 100%;
 }
 .iframe-container iframe{
   position: absolute;
@@ -365,4 +369,25 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
+  max-width: 100%;
+}
+
+div, iframe {
+    margin: auto auto;
+    max-width: 100%;
+}
+
+iframe {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+}
+
+.caption {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-weight: 330;
+  font-style: italic;
 }
