--- a/themes/hugo-lithium/layouts/partials/footer.html
+++ b/themes/hugo-lithium/layouts/partials/footer.html
@@ -2,10 +2,10 @@
       <footer class="footer">
         <ul class="footer-links">
           <li>
-            <a href="{{ .Site.RSSLink | relURL }}" type="application/rss+xml" target="_blank">RSS feed</a>
+            <a href="{{ .RSSLink | relURL }}" type="application/rss+xml" target="_blank">RSS feed</a>
           </li>
           <li>
-            <a href="https://gohugo.io/" class="footer-links-kudos">Made with <img src="{{ "images/hugo-logo.png" | relURL }}" width="22" height="22"></a> and <a href="https://bookdown.org/yihui/blogdown/" class="footer-links-kudos">  <img src="{{ "images/hex-blogdown.png" | relURL }}" width="22" height="22"></a>
+            <a class="footer-links-kudos">Blogroll:</a><a href="https://www.r-bloggers.com/" class="footer-links-kudos">R-Bloggers</a>
           </li>
         </ul>
       </footer>
