--- a/themes/hugo-lithium/layouts/partials/footer.html
+++ b/themes/hugo-lithium/layouts/partials/footer.html
@@ -5,7 +5,7 @@
             <a href="{{ .RSSLink | relURL }}" type="application/rss+xml" target="_blank">RSS feed</a>
           </li>
           <li>
-            <a class="footer-links-kudos">Blogroll:</a><a href="https://www.r-bloggers.com/" class="footer-links-kudos">R-Bloggers</a>
+            <a>Blogroll:</a><a href="https://www.r-bloggers.com/" class="footer-links-kudos">R-Bloggers</a>
           </li>
         </ul>
       </footer>
