enable code folding

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -11,8 +11,10 @@
 
     {{ if eq .Section "post" }}
     <span class="article-date">{{ .Date.Format "2006-01-02" }}</span>
+    
+    {{ partial "header_maincodefolding" . }}
     {{ end }}
-
+    
     <div class="article-content">
       {{ .Content }}
     </div>
