--- a/layouts/partials/head_custom.html
+++ b/layouts/partials/head_custom.html
@@ -1,7 +1,7 @@
 <script async src="https://use.fontawesome.com/32c3d13def.js"></script>
 {{ if not site.Params.disable_codefolding }}
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-  <link rel="stylesheet" href="{{ "css/codefolding.css" | relURL }}" />
+  <link rel="stylesheet" href="{{ "css/custom.css" | relURL }}" />
 {{ end }}
 
 
