--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -72,3 +72,16 @@
   color: #ccc;
 }
 
+/* Custom formatting for tags in summaries */
+.tags {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 8px;
+}
+.tags .tag {
+    /* override the `margin: auto;` rule which applies to all divs and iframes,
+     * defined in main.css */
+    margin: 0;
+
+    font-size: small;
+}
